2007-02-08  Marek Habersack  <grendello@gmail.com>

	* FormsAuthenticationModule.cs: Expire auth tickets properly.

	* MembershipProvider.cs: Do not clear the password before
	encrypting it. 

2007-01-20  Miguel de Icaza  <miguel@novell.com>

	* SqlRoleProvider.cs: comment out unused code.

	* SqlMembershipProvider.cs: Removed unused variables.
	Remove unused variable.

	* AnonymousIdentificationModule.cs (ClearAnonymousIdentifier):
	remove unused variable.   This might be a real bug.

2007-01-16 Vladimir Krasnov <vladimirk@mainsoft.com>

	* RoleManagerModule.cs: fixed OnPostAuthenticateRequest,
	CacheRolesInCookie not supported yet
	* Roles.cs: fixed DeleteCookie, CacheRolesInCookie not supported yet

2007-01-11 Adar Wesley <adarw@mainsoft.com>

	* MembershipProvider.cs: fixed EncryptPassword to use password buffer length

2007-01-04 Vladimir Krasnov <vladimirk@mainsoft.com>

	* AnonymousIdentificationModule.cs: fixed OnEnter, fixed failure on
	incorrect cookie value that browser may hold

2006-12-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthentication.cs: added internal ReturnUrl property,
	GetRedirectUrl added usage of ReturnUrl

2006-12-12 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthentication.cs: TARGET_J2EE define for static members

2006-12-06 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthenticationModule.cs: fixed OnAuthenticateRequest, suppress
	exception on wrong ticket

2006-12-03 Igor Zelmanovich <igorz@mainsoft.com>

	* FormsAuthenticationModule.cs: 
	set SkipAuthorization=true for WebResource.axd

2006-11-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* SqlMembershipProvider.cs: typo bug

2006-11-21 Vladimir Krasnov <vladimirk@mainsoft.com>

	* SqlMembershipProvider.cs: fixed fixed exception type in GetPassword
	checks user lockout

2006-11-20 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlMembershipProvider.cs: fixed: UpdateUser works properly.

2006-11-15 Igor Zelmanovich <igorz@mainsoft.com>
