@@ -1,3 +1,12 @@
+2007-02-19 Vladimir Krasnov <vladimirk@mainsoft.com>
+
+	* RoleManagerModule.cs: fixed role chaching in OnEndRequest and
+	OnPostAuthenticateRequest
+	* RolePrincipal.cs: implemented ToEncryptedTicket, implemented caching
+	role functionality
+	* Roles.cs: implemented DeleteCookie, fixed CookieProtectionValue to
+	get it's value from configuration
+
 2007-02-08  Marek Habersack  <grendello@gmail.com>
 
 	* FormsAuthenticationModule.cs: Expire auth tickets properly.
